# CUtilProblems

./: .gitignore  CMakeLists.txt  main.cpp
core/: 1.h  2.h  3.h  4.h  5.h  6.h
input-files/: cafea.in
input-files/greedy/greedy-1/: bac.in
input-files/greedy/greedy-10/: bac.in
input-files/greedy/greedy-11/: bac.in
input-files/greedy/greedy-4/: bac.in
input-files/greedy/greedy-7/: bac.in
probleme/bac/: bac-2020_iun_III-2.h  bac_2020_iun_III-1.h  bac_2021_speciala_III-2.h  bac_2021_speciala_III-3.h  bac_random.h
probleme/others/greedy/: greedy_1.h  greedy_10.h  greedy_11.h  greedy_2.h  greedy_4.h  greedy_6.h  greedy_7.h  greedy_9.h
probleme/pbinfo/: pbinfo_1262  pbinfo_1340.h  pbinfo_2271.h  pbinfo_2683.h  pbinfo_3739.h  pbinfo_91.h
utils/: Arrays.h  FileAPI.h  List.h
