cmake_minimum_required(VERSION 3.20)
project(ProblBac)

set(CMAKE_CXX_STANDARD 14)

add_executable(ProblBac main.cpp probleme/bac/bac_random.h probleme/bac/bac_2021_speciala_III-2.h probleme/bac/bac_2021_speciala_III-3.h probleme/bac/bac_2020_iun_III-1.h probleme/bac/bac-2020_iun_III-2.h probleme/pbinfo/pbinfo_2683.h utils/List.h utils/Arrays.h probleme/pbinfo/pbinfo_3739.h utils/FileAPI.h probleme/pbinfo/pbinfo_2271.h probleme/pbinfo/pbinfo_91.h)
