cmake_minimum_required(VERSION 3.20)
project(ProblBac)
set(CMAKE_CXX_STANDARD 14)
include_directories("/home/stefan911/CLionProjects/CUtilProblems")
add_executable(ProblBac main.cpp probleme/bac/bac_random.h probleme/bac/bac_2021_speciala_III-2.h probleme/bac/bac_2021_speciala_III-3.h probleme/bac/bac_2020_iun_III-1.h probleme/bac/bac-2020_iun_III-2.h probleme/pbinfo/pbinfo_2683.h utils/List.h probleme/pbinfo/pbinfo_3739.h utils/FileAPI.h probleme/pbinfo/pbinfo_2271.h probleme/pbinfo/pbinfo_91.h probleme/pbinfo/pbinfo_1340.h utils/Arrays.h probleme/pbinfo/pbinfo_1262 probleme/others/greedy/greedy_1.h probleme/others/greedy/greedy_2.h probleme/others/greedy/greedy_4.h probleme/others/greedy/greedy_6.h probleme/others/greedy/greedy_7.h probleme/others/greedy/greedy_9.h probleme/others/greedy/greedy_11.h)
